[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nrs_toolkit"
version = "0.0.2"
requires-python = ">=3.12"
description = "Personal Python toolkit: logging, db, etc."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nathanael Schaefer", email = "nathanael.r.schaefer@outlook.com" }]
dependencies = ["psutil"]

[tool.hatch.build.targets.wheel]
packages = ["nrs_toolkit"]